src/freeRTOS/wrapper.rs

unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n BaseType_t xQueuePeek(\n                           QueueHandle_t xQueue,\n                           void * const pvBuffer,\n                           TickType_t xTicksToWait\n                       );\n @endcode\n\n Receive an item from a queue without removing the item from the queue.\n The item is received by copy so a buffer of adequate size must be\n provided.  The number of bytes copied into the buffer was defined when\n the queue was created.\n\n Successfully received items remain on the queue so will be returned again\n by the next call, or a call to xQueueReceive().\n\n This macro must not be used in an interrupt service routine.  See\n xQueuePeekFromISR() for an alternative that can be called from an interrupt\n service routine.\n\n @param xQueue The handle to the queue from which the item is to be\n received.\n\n @param pvBuffer Pointer to the buffer into which the received item will\n be copied.\n\n @param xTicksToWait The maximum amount of time the task should block\n waiting for an item to receive should the queue be empty at the time\n of the call. The time is defined in tick periods so the constant\n portTICK_PERIOD_MS should be used to convert to real time if this is required.\n xQueuePeek() will return immediately if xTicksToWait is 0 and the queue\n is empty.\n\n @return pdPASS if an item was successfully received from the queue,\n otherwise errQUEUE_EMPTY.\n\n Example usage:\n @code{c}\n struct AMessage\n {\n  char ucMessageID;\n  char ucData[ 20 ];\n } xMessage;\n\n QueueHandle_t xQueue;\n\n // Task to create a queue and post a value.\n void vATask( void *pvParameters )\n {\n struct AMessage *pxMessage;\n\n  // Create a queue capable of containing 10 pointers to AMessage structures.\n  // These should be passed by pointer as they contain a lot of data.\n  xQueue = xQueueCreate( 10, sizeof( struct AMessage * ) );\n  if( xQueue == 0 )\n  {\n      // Failed to create the queue.\n  }\n\n  // ...\n\n  // Send a pointer to a struct AMessage object.  Don't block if the\n  // queue is already full.\n  pxMessage = & xMessage;\n  xQueueSend( xQueue, ( void * ) &pxMessage, ( TickType_t ) 0 );\n\n  // ... Rest of task code.\n }\n\n // Task to peek the data from the queue.\n void vADifferentTask( void *pvParameters )\n {\n struct AMessage *pxRxedMessage;\n\n  if( xQueue != 0 )\n  {\n      // Peek a message on the created queue.  Block for 10 ticks if a\n      // message is not immediately available.\n      if( xQueuePeek( xQueue, &( pxRxedMessage ), ( TickType_t ) 10 ) )\n      {\n          // pcRxedMessage now points to the struct AMessage variable posted\n          // by vATask, but the item still remains on the queue.\n      }\n  }\n\n  // ... Rest of task code.\n }\n @endcode\n \\defgroup xQueuePeek xQueuePeek\n \\ingroup QueueManagement"]
    pub fn xQueuePeek(
        xQueue: QueueHandle_t,
        pvBuffer: *mut ::std::os::raw::c_void,
        xTicksToWait: TickType_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n BaseType_t xQueuePeekFromISR(\n                                  QueueHandle_t xQueue,\n                                  void *pvBuffer,\n                              );\n @endcode\n\n A version of xQueuePeek() that can be called from an interrupt service\n routine (ISR).\n\n Receive an item from a queue without removing the item from the queue.\n The item is received by copy so a buffer of adequate size must be\n provided.  The number of bytes copied into the buffer was defined when\n the queue was created.\n\n Successfully received items remain on the queue so will be returned again\n by the next call, or a call to xQueueReceive().\n\n @param xQueue The handle to the queue from which the item is to be\n received.\n\n @param pvBuffer Pointer to the buffer into which the received item will\n be copied.\n\n @return pdPASS if an item was successfully received from the queue,\n otherwise pdFAIL.\n\n \\defgroup xQueuePeekFromISR xQueuePeekFromISR\n \\ingroup QueueManagement"]
    pub fn xQueuePeekFromISR(
        xQueue: QueueHandle_t,
        pvBuffer: *mut ::std::os::raw::c_void,
    ) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n BaseType_t xQueueReceive(\n                               QueueHandle_t xQueue,\n                               void *pvBuffer,\n                               TickType_t xTicksToWait\n                          );\n @endcode\n\n Receive an item from a queue.  The item is received by copy so a buffer of\n adequate size must be provided.  The number of bytes copied into the buffer\n was defined when the queue was created.\n\n Successfully received items are removed from the queue.\n\n This function must not be used in an interrupt service routine.  See\n xQueueReceiveFromISR for an alternative that can.\n\n @param xQueue The handle to the queue from which the item is to be\n received.\n\n @param pvBuffer Pointer to the buffer into which the received item will\n be copied.\n\n @param xTicksToWait The maximum amount of time the task should block\n waiting for an item to receive should the queue be empty at the time\n of the call. xQueueReceive() will return immediately if xTicksToWait\n is zero and the queue is empty.  The time is defined in tick periods so the\n constant portTICK_PERIOD_MS should be used to convert to real time if this is\n required.\n\n @return pdPASS if an item was successfully received from the queue,\n otherwise errQUEUE_EMPTY.\n\n Example usage:\n @code{c}\n struct AMessage\n {\n  char ucMessageID;\n  char ucData[ 20 ];\n } xMessage;\n\n QueueHandle_t xQueue;\n\n // Task to create a queue and post a value.\n void vATask( void *pvParameters )\n {\n struct AMessage *pxMessage;\n\n  // Create a queue capable of containing 10 pointers to AMessage structures.\n  // These should be passed by pointer as they contain a lot of data.\n  xQueue = xQueueCreate( 10, sizeof( struct AMessage * ) );\n  if( xQueue == 0 )\n  {\n      // Failed to create the queue.\n  }\n\n  // ...\n\n  // Send a pointer to a struct AMessage object.  Don't block if the\n  // queue is already full.\n  pxMessage = & xMessage;\n  xQueueSend( xQueue, ( void * ) &pxMessage, ( TickType_t ) 0 );\n\n  // ... Rest of task code.\n }\n\n // Task to receive from the queue.\n void vADifferentTask( void *pvParameters )\n {\n struct AMessage *pxRxedMessage;\n\n  if( xQueue != 0 )\n  {\n      // Receive a message on the created queue.  Block for 10 ticks if a\n      // message is not immediately available.\n      if( xQueueReceive( xQueue, &( pxRxedMessage ), ( TickType_t ) 10 ) )\n      {\n          // pcRxedMessage now points to the struct AMessage variable posted\n          // by vATask.\n      }\n  }\n\n  // ... Rest of task code.\n }\n @endcode\n \\defgroup xQueueReceive xQueueReceive\n \\ingroup QueueManagement"]
    pub fn xQueueReceive(
        xQueue: QueueHandle_t,
        pvBuffer: *mut ::std::os::raw::c_void,
        xTicksToWait: TickType_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n UBaseType_t uxQueueMessagesWaiting( const QueueHandle_t xQueue );\n @endcode\n\n Return the number of messages stored in a queue.\n\n @param xQueue A handle to the queue being queried.\n\n @return The number of messages available in the queue.\n\n \\defgroup uxQueueMessagesWaiting uxQueueMessagesWaiting\n \\ingroup QueueManagement"]
    pub fn uxQueueMessagesWaiting(xQueue: QueueHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n UBaseType_t uxQueueSpacesAvailable( const QueueHandle_t xQueue );\n @endcode\n\n Return the number of free spaces available in a queue.  This is equal to the\n number of items that can be sent to the queue before the queue becomes full\n if no items are removed.\n\n @param xQueue A handle to the queue being queried.\n\n @return The number of spaces available in the queue.\n\n \\defgroup uxQueueMessagesWaiting uxQueueMessagesWaiting\n \\ingroup QueueManagement"]
    pub fn uxQueueSpacesAvailable(xQueue: QueueHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n void vQueueDelete( QueueHandle_t xQueue );\n @endcode\n\n Delete a queue - freeing all the memory allocated for storing of items\n placed on the queue.\n\n @param xQueue A handle to the queue to be deleted.\n\n \\defgroup vQueueDelete vQueueDelete\n \\ingroup QueueManagement"]
    pub fn vQueueDelete(xQueue: QueueHandle_t);
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n BaseType_t xQueueGenericSendFromISR(\n                                         QueueHandle_t    xQueue,\n                                         const    void    *pvItemToQueue,\n                                         BaseType_t  *pxHigherPriorityTaskWoken,\n                                         BaseType_t  xCopyPosition\n                                     );\n @endcode\n\n It is preferred that the macros xQueueSendFromISR(),\n xQueueSendToFrontFromISR() and xQueueSendToBackFromISR() be used in place\n of calling this function directly.  xQueueGiveFromISR() is an\n equivalent for use by semaphores that don't actually copy any data.\n\n Post an item on a queue.  It is safe to use this function from within an\n interrupt service routine.\n\n Items are queued by copy not reference so it is preferable to only\n queue small items, especially when called from an ISR.  In most cases\n it would be preferable to store a pointer to the item being queued.\n\n @param xQueue The handle to the queue on which the item is to be posted.\n\n @param pvItemToQueue A pointer to the item that is to be placed on the\n queue.  The size of the items the queue will hold was defined when the\n queue was created, so this many bytes will be copied from pvItemToQueue\n into the queue storage area.\n\n @param pxHigherPriorityTaskWoken xQueueGenericSendFromISR() will set\n *pxHigherPriorityTaskWoken to pdTRUE if sending to the queue caused a task\n to unblock, and the unblocked task has a priority higher than the currently\n running task.  If xQueueGenericSendFromISR() sets this value to pdTRUE then\n a context switch should be requested before the interrupt is exited.\n\n @param xCopyPosition Can take the value queueSEND_TO_BACK to place the\n item at the back of the queue, or queueSEND_TO_FRONT to place the item\n at the front of the queue (for high priority messages).\n\n @return pdPASS if the data was successfully sent to the queue, otherwise\n errQUEUE_FULL.\n\n Example usage for buffered IO (where the ISR can obtain more than one value\n per call):\n @code{c}\n void vBufferISR( void )\n {\n char cIn;\n BaseType_t xHigherPriorityTaskWokenByPost;\n\n  // We have not woken a task at the start of the ISR.\n  xHigherPriorityTaskWokenByPost = pdFALSE;\n\n  // Loop until the buffer is empty.\n  do\n  {\n      // Obtain a byte from the buffer.\n      cIn = portINPUT_BYTE( RX_REGISTER_ADDRESS );\n\n      // Post each byte.\n      xQueueGenericSendFromISR( xRxQueue, &cIn, &xHigherPriorityTaskWokenByPost, queueSEND_TO_BACK );\n\n  } while( portINPUT_BYTE( BUFFER_COUNT ) );\n\n  // Now the buffer is empty we can switch context if necessary.\n  if( xHigherPriorityTaskWokenByPost )\n  {\n       // As xHigherPriorityTaskWokenByPost is now set to pdTRUE then a context\n       // switch should be requested. The macro used is port specific and\n       // will be either portYIELD_FROM_ISR() or portEND_SWITCHING_ISR() -\n       // refer to the documentation page for the port being used.\n       portYIELD_FROM_ISR( xHigherPriorityTaskWokenByPost );\n  }\n }\n @endcode\n\n \\defgroup xQueueSendFromISR xQueueSendFromISR\n \\ingroup QueueManagement"]
    pub fn xQueueGenericSendFromISR(
        xQueue: QueueHandle_t,
        pvItemToQueue: *const ::std::os::raw::c_void,
        pxHigherPriorityTaskWoken: *mut BaseType_t,
        xCopyPosition: BaseType_t,
    ) -> BaseType_t;
}
